@@ -13,6 +13,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * ひらがなのみの文章を、IMEを使用して変換します。
@@ -62,10 +63,10 @@ public class IMEConverter {
             String baseurl;
             String encode;
             if (isGoogleIME) {
-                baseurl = GOOGLE_IME_URL + URLEncoder.encode(org, "UTF-8");
+                baseurl = GOOGLE_IME_URL + URLEncoder.encode(org, StandardCharsets.UTF_8);
                 encode = "UTF-8";
             } else {
-                baseurl = SOCIAL_IME_URL + URLEncoder.encode(org, "UTF-8");
+                baseurl = SOCIAL_IME_URL + URLEncoder.encode(org, StandardCharsets.UTF_8);
                 encode = "EUC_JP";
             }
             URL url = new URL(baseurl);
@@ -79,9 +80,9 @@ public class IMEConverter {
                     new InputStreamReader(urlconn.getInputStream(), encode));
 
             String json = CharStreams.toString(reader);
-            //            if ( !Utility.isCB19orLater() ) {
-//                parsed = YukiKanaConverter.fixBrackets(parsed);
-//            }
+//          if ( !Utility.isCB19orLater() ) {
+//              parsed = YukiKanaConverter.fixBrackets(parsed);
+//          }
 
             return GoogleIME.parseJson(json);
 
